test/chainsaw/authpolicy/auto_login_post_logout_redirect_uri/authpolicy-with-post-logout-redirect-assert.yaml
apiVersion: v1
data:
  ztoperator.lua: |-
    local ignore_rules = {}
    local require_rules = {{regex="^/oauth2/callback$",methods={}},{regex="^/logout$",methods={}},{regex="^/login$",methods={}}}
    local deny_redirect_rules = {}
    local authorize_endpoint = "http://mock-oauth2.auth:8080/entraid/authorize"
    local login_params = {}
    local end_session_endpoint = "http://mock-oauth2.auth:8080/entraid/endsession"
    local post_logout_redirect_uri = "https%3A%2F%2Fsome-random-uri.com"

    -- returns true when {p,m} matches any rule in the supplied table
    local function match(rules, p, m)
        for _, rule in ipairs(rules) do
            if string.match(p, rule.regex) then
                -- empty "methods" table == all methods
                if next(rule.methods) == nil or rule.methods[m] then
                    return true
                end
            end
        end
        return false
    end

    -- returns true if {p,m} is in ignore_rules *and* NOT in require_rules
    local function should_bypass(p, m)
        local bypass = false
        if p ~= "" and m ~= "" then
            -- bypass only when it is in ignore_rules *and* NOT in require_rules
            if match(ignore_rules, p, m) and not match(require_rules, p, m) then
                bypass = true
            end
        end
        return bypass
    end

    -- returns true if {p,m} is in deny_redirect_rules
    local function should_deny_redirect(p, m)
        local deny_redirect = false
        if p ~= "" and m ~= "" then
            -- deny redirect only when it is in deny_redirect_rules
            if match(deny_redirect_rules, p, m) then
                deny_redirect = true
            end
        end
        return deny_redirect
    end

    local function is_empty_table(t)
        return type(t) ~= "table" or next(t) == nil
    end

    function envoy_on_request(request_handle)
        local raw_p = request_handle:headers():get(":path") or ""
        local m = request_handle:headers():get(":method") or ""
        local p = string.match(raw_p, "^[^?]*")

        local bypass = should_bypass(p, m)
        request_handle:logCritical("Login bypassed?: " .. tostring(bypass))
        request_handle:headers():add("x-bypass-login", tostring(bypass))

        local deny_redirect = should_deny_redirect(p, m)
        request_handle:logCritical("Deny redirect?: " .. tostring(deny_redirect))
        request_handle:headers():add("x-deny-redirect", tostring(deny_redirect))
    end

    function envoy_on_response(response_handle)
        local status = response_handle:headers():get(":status") or ""
        if status == "302" then
            local loc = response_handle:headers():get("location") or ""
            if loc ~= "" then
                if string.sub(loc, 1, #authorize_endpoint) == authorize_endpoint and not is_empty_table(login_params) then
                    local base, qs = loc:match("^([^?]+)%??(.*)$")
                    local filtered = {}
                    if qs ~= "" then
                        local params = {}
                        for key, val in string.gmatch(qs, "([^&=?]+)=([^&=?]+)") do
                            params[key] = val
                        end
                        for k, v in pairs(login_params) do
                            params[k] = v
                        end
                        for k, v in pairs(params) do
                            table.insert(filtered, k .. "=" .. v)
                        end
                    end

                    local new_qs = table.concat(filtered, "&")
                    local new_url = base .. (new_qs ~= "" and ("?" .. new_qs) or "")
                    response_handle:headers():replace("location", new_url)
                end

                if string.sub(loc, 1, #end_session_endpoint) == end_session_endpoint then
                    local base, qs = loc:match("^([^?]+)%??(.*)$")
                    local filtered = {}
                    if qs ~= "" then
                        local params = {}
                        for key, val in string.gmatch(qs, "([^&=?]+)=([^&=?]+)") do
                            params[key] = val
                        end
                        if post_logout_redirect_uri == "" then
                            params["post_logout_redirect_uri"] = nil
                        else
                            params["post_logout_redirect_uri"] = post_logout_redirect_uri
                        end
                        for k, v in pairs(params) do
                            table.insert(filtered, k .. "=" .. v)
                        end
                    end

                    local new_qs = table.concat(filtered, "&")
                    local new_url = base .. (new_qs ~= "" and ("?" .. new_qs) or "")
                    response_handle:headers():replace("location", new_url)
                end
            end
        end
    end
kind: ConfigMap
metadata:
  name: auth-policy-lua-script
