test/chainsaw/authpolicy/auto_login_post_logout_redirect_uri/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: auto-login-post-logout-redirect-uri
spec:
  skip: false
  concurrent: true
  skipDelete: false
  namespaceTemplate:
    metadata:
      name: chainsaw-post-logout
      labels:
        istio-injection: enabled
  steps:
    - try:
        - create:
            file: ../../../resources/skiperator/application-with-istio-mount.yaml
        - apply:
            file: ../../../resources/ingress/wildcard-ingress.yaml
        - create:
            file: ../../../resources/secret/oauth-secret.yaml
        - create:
            file: authpolicy-with-post-logout-redirect.yaml
        - script:
            content: sleep 14
        - script:
            content: |
              hurl --error-format long \
              --insecure --test tests-with-post-logout-redirect.hurl
        - update:
            file: authpolicy-without-post-logout-redirect.yaml
        - script:
            content: | 
              sleep 2
              kubectl rollout restart deploy application -n chainsaw-post-logout
              sleep 7
        - script:
            content: |
              hurl --error-format long \
              --insecure --test tests-without-post-logout-redirect.hurl
